# federated-learning-iot

./: LICENSE  README.md  docker-compose.yml
client/: .env.example  Dockerfile  pyproject.toml
client/client/: main.py
server/: .env.example  pyproject.toml
server/server/: main.py
