[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Jan Zborowski <janzborowski99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flwr = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
