[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Jan Zborowski <janzborowski99@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
flwr = "^0.17.0"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
